# AdventOfCode2024

./: .gitignore  CMakeLists.txt
src/: readinput.h
src/AoC22/: Day1.cpp
src/AoC22/input/: day1ex2.txt
src/AoC24/: Day1.cpp  Day2.cpp  Day3.cpp  Day4.cpp
src/AoC24/input/: file creator.py
